--- a/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
+++ b/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
@@ -1,18 +1,22 @@
 \section{Overview}
 
+This tutorial provides the third protocol from our recent publication \citep{Hoehna2017a}.
+The first protocol is described in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.pdf}{Substitution model tutorial} and the second protocol is described in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.pdf}{Partitioned data analysis tutorial}.
 
 This tutorial demonstrates some general principles of Bayesian model comparison, which is based on estimating the marginal likelihood of competing models and then comparing their relative fit to the data using Bayes factors.
 We consider the specific case of calculating Bayes factors to select among different substitution models.
-% and different partition configurations of aligned DNA sequences. 
 
 \subsection{Requirements}
 We assume that you have read and hopefully completed the following tutorials:
 \begin{itemize}
-\item RB\_Getting\_Started
-\item RB\_Data\_Tutorial
-\item RB\_CTMC\_Tutorial
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.pdf}{Getting started}
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics}
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.pdf}{Substitution model}
 \end{itemize}
-This means that we will assume that you know how to execute and load data into \RevBayes, are familiar with some basic commands, and know how to perform an analysis of a single-gene dataset (assuming an unconstrained/unrooted tree).
+Note that the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} introduces the basic syntax of \Rev but does not cover any phylogenetic models.
+You may skip the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} if you have some familiarity with \R.
+We tried to keep this tutorial very basic and introduce all the language concepts and theory on the way.
+You may only need the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} for a more in-depth discussion of concepts in \Rev.
 
 
 
@@ -26,11 +30,7 @@ Of course, you may want to use your own dataset instead.
 In the \cl{data} folder, you will find the following files
 \begin{itemize}
 \item
-\cl{primates\_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
-%\item
-%\cl{primates\_16s.nex}: Alignment of the \textit{16s ribosomal RNA} gene from the same 23 primates species.
-%\item
-%\cl{primates\_cox2.nex}: Alignment of the \textit{COX-2} gene from the same 23 primates species.
+\cl{primates\_and\_galeopterus\_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
 \end{itemize}
 
 
@@ -97,7 +97,7 @@ using both the stepping-stone \citep{Xie2011,Fan2011} and path sampling estimato
 
 
 \bigskip
-\subsection{Substitution Models}\label{secUnif} 
+\subsection{Substitution Models} 
 
 The models we use here are equivalent to the models described in the previous exercise on substitution models (continuous time Markov models).
 To specify the model please consult the previous exercise. Specifically, you will need to specify the following substitution models:
@@ -216,6 +216,13 @@ ps.marginal()
 
 \noindent \\ \impmark As an example we provide the file \textbf{RevBayes\_scripts/marginalLikelihood\_JukesCantor.Rev}.
 
+\begin{framed}
+We have kept this description of how to use stepping-stone-sampling and path-sampling very generic and did not provide the information about the model here.
+Our main motivation is to show that the marginal likelihood estimation algorithms are independent of the model.
+Thus, you can apply these algorithms to any	model, \EG relaxed clock models and birth-death models, as well.
+\end{framed}
+
+
 
 \subsection{Exercises}
 
@@ -327,14 +334,23 @@ Typically, once we have identified the ``best'' substitution model for our align
 Technically, this is a decision to condition our inferences on the selected model, which explicitly assumes that it provides a reasonable description of the process that gave rise to our data.
 However, there are several additional issues to consider before proceeding along these lines, which we briefly mention below.
 
-\subsection{Accommodating Process Heterogeneity}
-In the analyses that we performed in this tutorial, we assumed that all sites in an alignment evolved under an identical substitution process.
-It is well established that this assumption is frequently violated in real datasets.
-Various aspects of the substitution process---the stationary frequencies, exchangeability rates, degree of ASRV, etc.---may vary across sites of our sequence alignment.
-For example, the nature of the substitution process may vary between codon positions of protein-coding genes, between stem and loop regions of ribosomal genes, or between different gene and/or genomic regions. 
-It is equally well established that failure to accommodate this \textit{process heterogeneity}---variation in the nature of the substitution process across the alignment---will cause biased estimates of the tree topology, branch lengths and other phylogenetic model parameters.
-We can accommodate process heterogeneity by adopting a \emph{mixed-model} approach, where two or more subsets of sites are allowed to evolve under distinct substitution processes.
-We will demonstrate how to specify---and select among---alternative mixed models using \RevBayes in a separate tutorial, RB\_PartitionedData\_Tutorial.
+%\subsection{Accommodating Process Heterogeneity}
+%In the analyses that we performed in this tutorial, we assumed that all sites in an alignment evolved under an identical substitution process.
+%It is well established that this assumption is frequently violated in real datasets.
+%Various aspects of the substitution process---the stationary frequencies, exchangeability rates, degree of ASRV, etc.---may vary across sites of our sequence alignment.
+%For example, the nature of the substitution process may vary between codon positions of protein-coding genes, between stem and loop regions of ribosomal genes, or between different gene and/or genomic regions. 
+%It is equally well established that failure to accommodate this \textit{process heterogeneity}---variation in the nature of the substitution process across the alignment---will cause biased estimates of the tree topology, branch lengths and other phylogenetic model parameters.
+%We can accommodate process heterogeneity by adopting a \emph{mixed-model} approach, where two or more subsets of sites are allowed to evolve under distinct substitution processes.
+%We will demonstrate how to specify---and select among---alternative mixed models using \RevBayes in a separate tutorial, RB\_PartitionedData\_Tutorial.
+
+
+\subsection{Accommodating Model Uncertainty}
+In some or many situations the number of possible models to compare is large, \EG choosing all possible combinations of substitution models \citep{Huelsenbeck2004}.
+Furthermore, imagine, for example, that there are several (possibly many) alternative models that provide a similarly good fit to our given dataset.
+In such scenarios, conditioning inference on \textit{any} single model (even the `best') ignores uncertainty in the chosen model, which can cause estimates to be biased.
+This is the issue of \emph{model uncertainty}.
+The Bayesian framework provides a natural approach for accommodating model uncertainty by means of \textit{model averaging}; we simply adopt the perspective that models (like standard parameters) are random variables, and integrate the inference over the distribution of candidate models.
+We will demonstrate how to accommodate model uncertainty using \RevBayes in a separate tutorial, RB\_ModelAveraging\_Tutorial.
 
 \subsection{Assessing Model Adequacy}
 In this tutorial, we used Bayes factors to assess the fit of various substitution models to our sequence data, effectively establishing the \emph{relative} rank of the candidate models.
@@ -344,13 +360,6 @@ We can assess the absolute fit of a model to a given dataset using \emph{posteri
 This approach is based on the following premise: if the candidate model provides a reasonable description of the process that gave rise to our dataset, then we should be able to generate data under this model that resemble our observed data.
 We will demonstrate how to assess model adequacy using \RevBayes in a separate tutorial, RB\_ModelAdequacy\_Tutorial.
 
-\subsection{Accommodating Model Uncertainty}
-Even when we have carefully assessed the relative and absolute fit of candidate models to our dataset, it may nevertheless be unwise to condition our inference on the best model.
-Imagine, for example, that there are several (possibly many) alternative models that provide a similarly good fit to our given dataset.
-In such scenarios, conditioning inference on \textit{any} single model (even the `best') ignores uncertainty in the chosen model, which will cause estimates to be biased.
-This is the issue of \emph{model uncertainty}.
-The Bayesian framework provides a natural approach for accommodating model uncertainty by means of \textit{model averaging}; we simply adopt the perspective that models (like standard parameters) are random variables, and integrate the inference over the distribution of candidate models.
-We will demonstrate how to accommodate model uncertainty using \RevBayes in a separate tutorial, RB\_ModelAveraging\_Tutorial.
 
 
 
