--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_2_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_2_content.tex
@@ -355,18 +355,19 @@ The script is easily modified for use with different datasets.
 To create build a figure, open an \R session and load the plotting script with the {\tt source} function
 \begin{snugshade}
 \begin{lstlisting}
-source("plot\_anc\_state.n4.R\")\end{lstlisting}
+source("plot_anc_state.n4.R")
+\end{lstlisting}
 \end{snugshade}
 
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=0.6\textwidth]{figures/fig_simple_RevGadgets_ase.pdf}
-\caption{Tree with ancestral state estimates for the ``simple'' analysis. Nodes are annotated with ancestral states before and after cladogenetic events. Most probable states are shown. Colors of markers indicate the range state. Sizes of markers indicate the posterior probability of that state. }
+\caption{Tree with ancestral state estimates for the ``simple'' analysis. Nodes are annotated with ancestral states before and after cladogenetic events. The ancestral range with the highest posterior probability is shown. Colors of markers indicate the range state.}
 \label{fig:simple_RevGadgets_ase}
 \end{figure}
 
 Notice that the model infers a widespread ancestral range for the clade (KOMH) approximately four million years ago when only Kauai existed.
-Similar geologically unrealistic widespread ranges are estimated for the {\it Agyroxiphium} clade (KMH) and the {\it Dubautia sheriffiana} and {\it D. arborea} clade (OMH).
+Similar geologically unrealistic widespread ranges are estimated for the {\it Agyroxiphium} clade (KMH) and the {\it D. sheriffiana} and {\it D. arborea} clade (OMH).
 The remaining tutorials will focus on improvements to the simple DEC model presented here.
 
 \newpage
