Building tutorial pdf’s and manual

--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -25,19 +25,27 @@
 \author{
 Sebastian H{\"o}hna,
 %\and
-Michael J. Landis,
+Michael J.~Landis,
 %\and
-Tracy A. Heath,
+Tracy A.~Heath,
 %\and
 Bastien Boussau,
 %\and
+Will A.~Freyman,
+%\and
+Will Pett,
+%\and
+April Wright,
+%\and
+Mike R.~May,
+%\and
 Nicolas Lartillot,
 %\and
-Brian R. Moore,
+Brian R.~Moore,
 %\and
 Fredrik Ronquist, and
 %\and
-John P. Huelsenbeck
+John P.~Huelsenbeck
 }
 
 
@@ -68,29 +76,36 @@ John P. Huelsenbeck
 
 
 
-\part{Models of Molecular Evolution}
+\part{Inference}
+
+\chapter{Introduction to Markov chain Monte Carlo Algorithms}
+\def \ResourcePath {RB_MCMC_Intro_Tutorial/}
+\include{RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial_content}
+
+%\chapter{More on Markov chain Monte Carlo Algorithms}
+%\def \ResourcePath {RB_MCMC_Tutorial/}
+%\include{RB_MCMC_Tutorial/RB_MCMC_Tutorial_content}
+
+
+\part{Basic Phylogeny Estimation}
 
 \chapter{Continuous Time Markov Model for Discrete Character Evolution}
 \def \ResourcePath {RB_CTMC_Tutorial/}
 \include{RB_CTMC_Tutorial/RB_CTMC_Tutorial_content}
 
-\chapter{Partitioned Data Analysis}
-\def \ResourcePath {RB_Partition_Tutorial/}
-\include{RB_Partition_Tutorial/RB_Partition_Tutorial_content}
 
-
-
-
-
-\part{Inference}
-
-\chapter{Markov chain Monte Carlo Algorithms}
-\def \ResourcePath {RB_MCMC_Tutorial/}
-\include{RB_MCMC_Tutorial/RB_MCMC_Tutorial_content}
+\part{Model Selection, Model Averaging, and Model Testing}
 
 \chapter{Model Selection and Bayes Factors}
 \def \ResourcePath {RB_BayesFactor_Tutorial/}
 \include{RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content}
+
+
+\part{More on Substitution Models}
+
+\chapter{Partitioned Data Analysis}
+\def \ResourcePath {RB_Partition_Tutorial/}
+\include{RB_Partition_Tutorial/RB_Partition_Tutorial_content}
 
 
 
