--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1092,7 +1092,10 @@ This will execute the analysis and you should see the following output (though n
 When the analysis is complete, \RevBayes will quit and you will have a new directory called \cl{output} that will contain all of the files you specified with the monitors (Sect.\ \ref{subsub:Exercise-Monitors}).
 
 \bigskip
-\subsection{Summarize Your Results}\label{subsect:Exercise-SummarizeResults}
+\subsection{Evaluate and Summarize Your Results}\label{subsect:Exercise-SummarizeResults}
+
+%TODO some text here
+% what is interesting? What are we looking for? 
 
 \medskip
 \subsubsection{Evaluate MCMC}\label{subsub:Exercise-EvalMCMC}
@@ -1158,7 +1161,7 @@ Samples taken near the beginning of chain are often discarded or ``burned'' beca
 \label{fig:tracer}
 \end{figure}
 The trace window allows us to evaluate how well our chain is sampling parameter space.
-The output in Figure 4 is a fairly good trace - there is no consistent pattern or trend in the samples, nor are there large square-shaped steps in the trace.
+The output in figure \ref{fig:tracer} shows fairly good \textit{mixing}--there is no consistent pattern or trend in the samples, nor are there long intervals where the statistic does not change.
 The presence of a trend or large leaps in a parameter value might indicate that your MCMC is not mixing well.
 You can read more about MCMC tuning and improving mixing in the tutorials \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial.pdf}{Intro to MCMC} and \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial.pdf}{MCMC Algorithms}.
 
@@ -1198,7 +1201,7 @@ trace = readTreeTrace("output/bears.trees")
 
 The first thing we need to do is remove taxa for which we did not have any molecular or morphological data.
 The phylogenetic placement of these taxa is based only on their occurrence times and any clade constraints we applied (section \ref{subsub:Exercise-FBD-Constraints}). 
-Because no data are available to resolve their relationships to other lineages, we will treat their placement as \textit{nuisance parameters} and remove them from the summary tree.
+Because no data are available to resolve their relationships to other lineages, we will treat their placement as \href{https://en.wikipedia.org/wiki/Nuisance_parameter}{\textit{nuisance parameters}} and remove them from the summary tree.
 
 We must read our complete taxon list into \RevBayes so that we can easily access the taxon names of the lineages we'd like to prune.
 {\tt \begin{snugshade*}
@@ -1223,16 +1226,30 @@ taxa
 \end{lstlisting}
 \end{snugshade*}}
 
-
-Use the \cl{fnPruneTree()} function to prune taxon \cl{17} and taxon \cl{20} from each tree using a \cl{for} loop.
+If you use the size function of the \cl{trace} variable by typing the command \colorbox{shadecolor}{\cl{trace.size()}}, you will see that our MCMC sampled 1001 trees. 
+We will first disregard the first 51 trees in our trace by setting the setting the starting value of the iterator we'll use to \cl{52}. 
+This burn-in value will be stored in the variable called \cl{burn}.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-for(i in 1:trace.size())
+burn = 52
+\end{lstlisting}
+\end{snugshade*}}
+
+Use the \cl{fnPruneTree()} function to prune taxon \cl{17} and taxon \cl{20} from each tree using a \cl{for} loop.
+We'll store each new tree in the vector called \cl{trees}.
+However, since that vector will be a different length than \cl{trace} we then need another iterator to index \cl{trees}.
+Call the \cl{trees} index \cl{ti} and increment its value in after it is used using the \cl{++} operator.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+ti = 1
+for(i in burn:trace.size())
 {
-    trees[i] = fnPruneTree(trace.getTree(i), pruneTaxa=v(taxa[17],taxa[20]))
+    trees[ti++] = fnPruneTree(trace.getTree(i), pruneTaxa=v(taxa[17],taxa[20]))
 }
 \end{lstlisting}
 \end{snugshade*}}
+
+Now if you view the size of the \cl{trees} vector (use \cl{trees.size()}), you will see that this list of trees has \cl{950} elements.
 
 Then we will use the \cl{mccTree} function to return a maximum clade credibility (MCC) tree.
 The MCC tree is the tree with the maximum product of the posterior clade probabilities.
@@ -1246,14 +1263,14 @@ mccTree(trace_pruned, "output/bears.mcc.tre" )
 
 
 When there are sampled ancestors present in the tree, visualizing the tree can be fairly difficult in traditional tree viewers.
-We will make use of a browser-based tree viewer called \href{http://tgvaughan.github.io/icytree/}{IcyTree}, created by \href{TV}{Tim Vaughan}.
+We will make use of a browser-based tree viewer called \href{http://tgvaughan.github.io/icytree/}{IcyTree}, created by \href{https://github.com/tgvaughan}{Tim Vaughan}.
 IcyTree has many unique options for visualizing phylogenetic trees and can produce publication-quality vector files (\IE svg). 
 Additionally, it correctly represents sampled ancestors on the tree as a node with only one descendant. 
 
 {\begin{framed}
 Navigate to \url{http://tgvaughan.github.io/icytree} and open the file \cl{output/bears.mcc.tre} in IcyTree.
 
-Try to replicate Fig.\ \ref{fig:IcyTreeSumm}. Hint: Look under style, at ``Mark Singletons''.
+Try to replicate Fig.\ \ref{fig:IcyTreeSumm}. Hint: Look under style, at \mi{Mark Singletons}.
 Why might a node with a sampled ancestor be referred to as a singleton?
 
 Try clicking on a branch.
