more edits... TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1034,7 +1034,7 @@ q()
 \end{snugshade*}}
 
 {\begin{framed}
-You made it! Save and close all files.
+You made it! Save all of your files.
 \end{framed}}
 
 \bigskip
